--- a/Basic_React_Apps/src/styles/App.css
+++ b/Basic_React_Apps/src/styles/App.css
@@ -1,6 +1,106 @@
+* {
+  margin: 0;
+  padding: 0;
+
+  overflow-x: hidden;
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(4, 93, 63);
+}
+
+
+.icon {
+    width: 60px;
+}
+
+header {
+    background-color: blueviolet;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    max-width: 100%;
+    height: 70px;
+
+    padding: 10px;
+}
+
+header > div {
+    display: flex;
+
+}
+
+.img--logo-container {
+    max-width: 100%;
+}
+
+
+.img--logo-container > img {
+    max-width: 100%;
+}
+
+.search--input {
+    max-width: 100%;
+}
+
+.search--input > div {
+    max-width: 100%;
+}
+
+
+
+.main--body{
+    display: flex;
+    align-items: center;
+}
+
+.descript {
+    display: column;
+    align-items: center;
+
+    text-align: center;
+
+    max-width: 80%;
+    padding: 10px;
+}
+
+
+
+.top--products {
+    display: flex;
+    max-width: 100%;
+    justify-content: space-around;
+    align-items: center;
+
+    margin: 10px auto;
+}
+
+
+
+.card {
+    background-color: #fff;
+    width: 300px;
+}
+
+.card > div {
+    max-width: 100%;
+}
+
+.card > img {
+    max-width: 100%;
+    /* object-fit: cover; */
+}
+
+
+
+
+.products--grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin: auto;
+    margin-left: 10px;
+    gap: 10px;
 }
