styled relavent elements

--- a/Basic_portfolio_site_with_react/src/Styles/index.css
+++ b/Basic_portfolio_site_with_react/src/Styles/index.css
@@ -5,8 +5,11 @@
 
   background-color: #E09132;
 
+  height: 100vh;
   margin: 0;
   padding: 0;
+
+  /* position: relative; */
 
   /* font-synthesis: none;
   text-rendering: optimizeLegibility;
