--- a/Basic_portfolio_site_with_react/src/Styles/App.css
+++ b/Basic_portfolio_site_with_react/src/Styles/App.css
@@ -17,7 +17,7 @@ header {
 
 .company--name {
 	display: flex;
-	margin-left: 40px;
+	margin-left: 2%;
 	cursor: pointer;
 	align-items: center;
 	justify-content: center;
@@ -31,6 +31,15 @@ header {
 
 .company--name > span {
 	font-size: 20px;
+	transition: 0.001s;
+}
+
+.company--name:hover {
+	color: #5b99c7;
+}
+
+.company--name:active {
+	color: #E09132;
 }
 
 nav {
@@ -48,6 +57,15 @@ nav > div {
 	margin-left: 40px;
 	text-align: center;
 	cursor: pointer;
+	transition: 0.001s;
+}
+
+nav > div:hover {
+	color: #E09132;
+}
+
+nav > div:active {
+	color: #5b99c7;
 }
 
 /* .home--links {
@@ -64,6 +82,21 @@ nav > div {
 
 	border: none;
 	border-radius: 20px;
+
+	/* box-shadow: #a4d5e3 -1px -1px 30px 3px; */
+	transition: 0.001s;
+}
+
+.cta--button:hover {
+	background-color: #21669b;
+	box-shadow: #a4d5e3 -1px -1px 10px 3px;
+	color: #fff;
+}
+
+.cta--button:active {
+	background-color: #a4d5e3;
+	box-shadow: #a4d5e3 -1px -1px 30px 3px;
+	color: #0D2137;
 }
 
 
@@ -109,6 +142,20 @@ nav > div {
 
 	border: none;
 	border-radius: 30px;
+	transition: 0.1s;
+}
+
+.hero-cta--btn:hover {
+	background-color: #a0aef5;
+	color: #0D2137;
+	border: 3px #0D2137 solid;
+	/* width: 250px; */
+}
+
+.hero-cta--btn:active {
+	background-color: #0D2137;
+	color: #fff;
+	border: 3px #a0aef5 solid;
 }
 
 .main--img {
@@ -182,6 +229,12 @@ nav > div {
 	object-fit: cover;
 	width: 100%;
 	height: 70%;
+}
+
+.services--card > img:hover {
+	/* width: 120%; */
+	/* object-fit: scale-down; */
+	/* cursor: -moz-grab; */
 }
 
 .services--card > p {
@@ -330,10 +383,157 @@ hr {
 
 
 
-.footer {
-	display: flex;
+
+.form--head {
+	text-align: center;
+	font-size: 30px;
+	color: #0D2137;
 }
 
-.footer > div {
-	width: 25%;
+form {
+	background-color: #a0aef5;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	justify-content: center;
+	align-items: center;
+
+	width: 70%;
+	margin: auto;
+	padding: 0 50px;
+	height: 400px;
+
+	border-radius: 10px;
+}
+
+form > div {
+	display: flex;
+	flex-direction: column;
+	width: 80%;
+	margin: 0 auto;
+}
+
+.vert--line {
+	border-left: #0D2137 2px solid;
+}
+
+label {
+	margin-bottom: 15px;
+	font-size: 20px;
+	font-weight: 600;
+	color: #0D2137;
+}
+
+input {
+	height: 50px;
+	padding: 2px 10px;
+	font-size: 20px;
+	color: #0D2137;
+	background-color: #5b99c7;
+	border: #0D2137 2px solid;
+	border-radius: 5px;
+}
+
+form > button {
+	background-color: #E09132;
+	color: #0D2137;
+	font-weight: 600;
+	width: 150px;
+	height: 45px;
+	border: #0D2137 1.5px solid;
+	border-radius: 5px;
+	font-size: 20px;
+	margin: 0 auto;
+	grid-column: span 2;
+	/* insert box-shadow: ; */
+}
+
+form > button:hover {
+	background-color: #0D2137;
+	color: #E09132;
+	border: 3px #0b446f solid;
+	/* width: 250px; */
+}
+
+form > button:active {
+	background-color: #0D2137;
+	color: #fff;
+	border: 3px #a0aef5 solid;
+}
+
+
+
+
+.footer {
+	display: flex;
+	margin: 60px auto;
+	margin-bottom: 0;
+	/* width: 100%; */
+	padding: 10px;
+	background-color: #0D2137;
+	color: #5b99c7;
+}
+
+.company--about {
+	width: 40%;
+}
+
+.company--about > p {
+	width: 60%;
+}
+
+.signage {
+	display: flex;
+	/* justify-content: center; */
+	align-items: center;
+	font-size: 35px;
+	margin-bottom: 10px;
+	cursor: pointer;
+}
+
+.logo {
+	width: 20%;
+}
+
+.social--media {
+	display: flex;
+	margin: 15px 0;
+	
+}
+
+.social--media--icon {
+	width: 35px;
+	margin-right: 10%;
+	cursor: pointer;
+}
+
+.footer > .more--info {
+	display: flex;
+	flex-direction: column;
+	/* justify-content: ; */
+	width: 20%;
+}
+
+.more--info > ul {
+	height: 60%;
+}
+
+.more--info > h5 {
+	/* text-align: center; */
+	margin: 10px 0;
+	font-size: 18px;
+}
+
+
+li {
+	list-style: none;
+	margin: 10px 0;
+	cursor: pointer;
+}
+
+li:hover {
+	text-decoration: underline;
+}
+
+.footer--cta {
+	font-size: 15px;
 }
