--- a/Basic_React_Features/src/App.css
+++ b/Basic_React_Features/src/App.css
@@ -5,6 +5,15 @@
   text-align: center;
 }
 
+button {
+  display: inline-block;
+  background-color: rgb(5, 40, 110);
+  color: white;
+  width: 100px;
+  padding: 20px;
+}
+/* 
+
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -39,4 +48,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
