--- a/Basic_React_Features/src/App.css
+++ b/Basic_React_Features/src/App.css
@@ -14,18 +14,19 @@ button {
 }
 
 .box {
-  background-color: limegreen;
+  /* background-color: black; */
   width: 100px;
   height: 100px;
+  border-radius: 10px;
 }
 
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 50px;
+  gap: 20px;
 }
 
-
+/*
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -60,4 +61,5 @@ button {
 
 .read-the-docs {
   color: #888;
-} */
+}
+ */
